--- a/home.html
+++ b/home.html
@@ -40,10 +40,18 @@
               </div>
             </a>
             <div class="collapse" id="menu-order">
-              <a href="#" class="sidebar-link">
-                <div class="ps-5">其他選項</div>
+              <a href="orders.html" class="sidebar-link">
+                <div class="ps-5">訂單列表</div>
+              </a>
+              <a href="order.html" class="sidebar-link">
+                <div class="ps-5">單一訂單</div>
               </a>
             </div>
+          </div>
+          <div>
+            <a href="home.html" class="sidebar-link">
+              <div class="px-4"><i class="bi bi-list-task"></i> 參考連結</div>
+            </a>
           </div>
         </div>
         <!-- 3.登出 -->
@@ -157,6 +165,7 @@
                   </table>
                 </div>
               </div>
+
               <div class="card-footer bg-transparent py-3">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination justify-content-end mb-0">
