--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
         <!-- 3.登出 -->
         <!-- 自動置底 -->
         <a class="mt-auto sidebar-link" href="#">
-          <div class="px-4"><i class="bi bi-box-arrow-in-right pe-1"></i>登出</div>
+          <div class="px-4"><i class="bi bi-box-arrow-in-left pe-1"></i>登出</div>
         </a>
       </aside>
 
