--- a/layout.html
+++ b/layout.html
@@ -54,11 +54,12 @@
         </div>
         <!-- 3.登出 --><!-- 自動置底 -->
         <a class="mt-auto sidebar-link " href="#">
-          <div class="px-4">登出<i class="bi bi-box-arrow-in-right"></i></div>
+          <div class="px-4"><i class="bi bi-box-arrow-in-left"></i>登出</div>
         </a>
       </aside>
 
       <main class="main">
+        <!--展開 -->
         <div class="bg-white w-100 border-bottom sticky-top">
           <a
             href="#"
@@ -68,6 +69,8 @@
             <i class="bi bi-arrows-angle-expand"></i
           ></a>
         </div>
+
+        <!-- 內容 -->
 
 
 
