--- a/order.html
+++ b/order.html
@@ -21,7 +21,7 @@
         <!-- 2.選單 -->
         <div class="overflow-auto mt-3">
           <div>
-            <a href="#" class="sidebar-link active">
+            <a href="home.html" class="sidebar-link active">
               <div class="px-4"><i class="bi bi-house-door"></i> 首頁</div>
             </a>
           </div>
@@ -56,7 +56,7 @@
         </div>
         <!-- 3.登出 --><!-- 自動置底 -->
         <a class="mt-auto sidebar-link" href="#">
-          <div class="px-4">登出<i class="bi bi-box-arrow-in-right"></i></div>
+          <div class="px-4"><i class="bi bi-box-arrow-in-left"></i>登出</div>
         </a>
       </aside>
 
