--- a/banner.html
+++ b/banner.html
@@ -16,7 +16,7 @@
         class="navbar navbar-expand-lg d-flex justify-content-between align-items-center bg-nbaBlue link-white navbar-light px-3"
       >
         <!-- 包品牌 -->
-        <div class="">
+        <div class="d-flex justify-content-between align-items-center">
           <div class="d-flex">
             <div>
               <a class="navbar-brand" href="#"> JerseyTown </a>
@@ -25,42 +25,42 @@
               <h1 class="fs-3 fw-bold mb-0 ms-n3">JerseyTown</h1>
             </a>
           </div>
+          <!-- 漢堡 -->
+          <div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <!--  -->
         </div>
         <!--包選單 -->
-        <!-- 漢堡 -->
-        <div>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-        <!--  -->
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
-                  class="nav-link link-light active"
+                  class="nav-link  active"
                   aria-current="page"
                   href="#"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="#">Service</a>
+                <a class="nav-link " href="#">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="#">Product</a>
+                <a class="nav-link " href="#">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="#">SecondHand</a>
+                <a class="nav-link" href="#">SecondHand</a>
               </li>
               <li>
                 <a class="btn btn-nbaRed rounded-pill" type="submit">
@@ -74,29 +74,33 @@
       <!-- banner -->
       <div class="banner bgs-cover"></div>
       <!-- 募款 -->
-      <div class="container">
-        <div class="row justify-content-center row-cols-1 row-cols-lg-2 pt-5">
-          <div class="col">
-            <img
-              class="of-cover w100"
-              height="486"
-              width="648"
-              src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
-              alt="義賣球衣"
-            />
-          </div>
-          <div class="col d-flex align-items-center">
-            <div class="money">
-              <p class="money_service">Service</p>
-              <h2 class="money_title">FUNDRAISING</h2>
-              <p>
-                你紙爸發全家聽，綠間不結縣我究，個毛亮高人。<br />
-                卻高酒死這形易止經我腳家立力還上這可......<br />
-                <br />
-                回男腦回義心便有當會兩水記生這自；<br />
-                演般否前出級就話萬水直無基可住。廣製因，全氣改我？<br />
-              </p>
-            </div>
+      <div
+        class="row d-flex justify-content-center row-cols-1 row-cols-lg-2 pt-5 mx-5 px-5 g-0"
+      >
+        <div class="col">
+          <img
+            class="of-cover"
+            height="486"
+            width="548"
+            src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
+            alt="義賣球衣"
+          />
+        </div>
+        <div class="col d-flex align-items-center">
+          <div class="money">
+            <p class="money_service">Service</p>
+            <h2 class="money_title">FUNDRAISING</h2>
+            <p>
+              The Association of Jersey Charities exists to provide guidance to
+              and be a source of funding for its members. <br />
+              Registered Jersey <br />
+              charities and other charities registered as charities under the
+              law of the United Kingdom, <br />
+              on the basis the charity carries out <br />
+              substantial charity activities in or from within Jersey, are
+              <br />
+              welcome to apply to be members. <br />
+            </p>
           </div>
         </div>
       </div>
@@ -182,7 +186,7 @@
         </p>
       </div>
       <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
-        <div class="col">
+        <div class="col mb-5 mb-lg-0">
           <div class="card position-relative shadow">
             <img
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -204,7 +208,7 @@
                 75th Anniversary Team in 2021.
               </p>
             </div>
-            <div class="">
+            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none link-pick_black pb-1"
@@ -213,7 +217,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col mb-5 mb-lg-0">
           <div class="card position-relative shadow">
             <img
               src="nbaWeb/PNG-images-NBA-Players-28png.png"
@@ -232,7 +236,7 @@
                 most career assists.
               </p>
             </div>
-            <div class="">
+            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none link-pick_black pb-1"
@@ -241,7 +245,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col mb-5 mb-lg-0">
           <div class="card position-relative shadow">
             <img
               src="nbaWeb/PNG-images-NBA-Players-1png.png"
@@ -262,7 +266,7 @@
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
             </div>
-            <div class="">
+            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none link-pick_black pb-1"
@@ -280,6 +284,45 @@
           class="btn btn-outline-nbaBlue rounded-pill my-5"
           >SEE MORE LISTS</a
         >
+      </div>
+      <!-- 徵才 -->
+      <div
+        class="row row-cols-1 row-cols-md-2 d-flex justify-content-center mb-5 mx-5 g-0"
+      >
+        <div class="col-6 d-flex ms-5 mb-5">
+          <img
+            class=""
+            height="130"
+            src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
+            alt=""
+          />
+          <div class="">
+            <h3>JOIN TEAM</h3>
+            <p>jersey fundraising</p>
+            <a href="" class="btn btn-outline-pickBlack rounded-pill"
+              >SEND MESSAGE</a
+            >
+          </div>
+        </div>
+        <div class="col-6 d-flex ms-5">
+          <img
+            class=""
+            height="130"
+            src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
+            alt=""
+          />
+          <div class="">
+            <h3>JOIN TEAM</h3>
+            <p>customized jersey</p>
+            <a href="" class="btn btn-outline-pickBlack rounded-pill"
+              >SEND MESSAGE</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="footer bg-pickBlack text-center text-white py-2 pt-4">
+        <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
       </div>
     </div>
 
