--- a/banner.html
+++ b/banner.html
@@ -277,7 +277,7 @@
         </div>
       </div>
 
-      <div class="sell_more text-center">
+      <div class="sell_more text-center bolder-pickYellow border-bottom border-3">
         <a
           type="button"
           href=""
@@ -286,39 +286,46 @@
         >
       </div>
       <!-- 徵才 -->
-      <div
-        class="row row-cols-1 row-cols-md-2 d-flex justify-content-center mb-5 mx-5 g-0"
-      >
-        <div class="col-6 d-flex ms-5 mb-5">
-          <img
-            class=""
-            height="130"
-            src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
-            alt=""
-          />
-          <div class="">
-            <h3>JOIN TEAM</h3>
-            <p>jersey fundraising</p>
-            <a href="" class="btn btn-outline-pickBlack rounded-pill"
-              >SEND MESSAGE</a
-            >
+      <div class="container-lg ">
+        <div
+          class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5 "
+        >
+          <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
+            <img
+              class=""
+              height="130"
+              src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
+              alt=""
+            />
+            <div class="">
+              <h3>JOIN TEAM</h3>
+              <p>jersey fundraising</p>
+              <a href="" class="btn btn-outline-pickBlack rounded-pill"
+                >SEND MESSAGE</a
+              >
+            </div>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <img
+              class=""
+              height="130"
+              src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
+              alt=""
+            />
+            <div class="">
+              <h3>JOIN TEAM</h3>
+              <p>customized jersey</p>
+              <a href="" class="btn btn-outline-pickBlack rounded-pill"
+                >SEND MESSAGE</a
+              >
+            </div>
           </div>
         </div>
-        <div class="col-6 d-flex ms-5">
-          <img
-            class=""
-            height="130"
-            src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
-            alt=""
-          />
-          <div class="">
-            <h3>JOIN TEAM</h3>
-            <p>customized jersey</p>
-            <a href="" class="btn btn-outline-pickBlack rounded-pill"
-              >SEND MESSAGE</a
-            >
-          </div>
-        </div>
+      </div>
+
+      <div class="position-relation">
+        <img src="./nbaWeb/silhouette-basket-01.svg" alt="" height="100" width="100" class="custom_img_after position-fixed bottom-0 end-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
+        <img src="./nbaWeb/1652102106slam-dunk-silhouette-basketball.svg" alt="" height="100" width="100" class="custom_img_befor position-fixed bottom-0 end-0 opacity-0.1">
       </div>
 
       <div class="footer bg-pickBlack text-center text-white py-2 pt-4">
