--- a/banner.html
+++ b/banner.html
@@ -55,12 +55,14 @@
                 <a class="nav-link p-3" href="#Product">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Rank">Ranking</a>
+                <a class="nav-link p-3" href="#Rank">Rank</a>
               </li>
-              <li class="hvr-grow-shadow ">
-                <a class="btn btn-nbaRed rounded-pill text-white p-3" type="submit">
-                  Customized
-                </a>
+              <li class="hvr-grow-shadow ms-1">
+                <button class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed">
+                  <a class="text-decoration-none text-white" type="submit">
+                    Customized
+                  </a>
+                </button>
               </li>
             </ul>
           </div>
@@ -84,7 +86,7 @@
         <div class="col d-flex align-items-center">
           <div class="money">
             <p class="money_service">Service</p>
-            <h2 class="money_title">FUNDRAISING</h2>
+            <h2 class="money_title text-nbaBlue">FUNDRAISING</h2>
             <p>
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
